--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
