--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "react-scroll": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
