--- a/package.json
+++ b/package.json
@@ -32,17 +32,15 @@
     ]
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.15",
-    "argon2": "^0.27.1",
+    "argon2": "^0.27.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "gsap": "^3.11.5",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-reveal": "^1.2.2",
+    "react-scroll": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
